Updated file layout, HTML added

--- a/index.html
+++ b/index.html
@@ -1,51 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./style.css">
   <title>Frontend Mentor | Notifications page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+
 </head>
+
 <body>
+  <header class="header header--flex">
+    <h1 class="header__h1">Notifications 3</h1>
+    <a href="" class="header__a">Mark all as read</a>
+  </header>
+  <main class="main main--flex">
+    <div class="main__div">
+      <img class="main__img" src="./assets/images/avatar-mark-webber.webp" alt="Mark Webber Avatar">
+      <a href="#" class="main__link main__link--black">Mark Webber</a> reacted to your recent post <a href=""
+        class="main__link main__link--blue">My first tournament today!</a>
+      1m ago
+    </div>
 
-  Notifications 3
+    <div class="main__div">
+      <img class="main__img" src="./assets/images/avatar-angela-gray.webp" alt="Angela Gray Avatar">
+      <a href="#" class="main__link main__link--black">Angela Gray</a> followed you
+      5m ago
+    </div>
 
-  Mark all as read
+    <div class="main__div">
+      <img class="main__img" src="./assets/images/avatar-jacob-thompson.webp" alt="Jacob Thompson Avatar">
+      <a href="#" class="main__link main__link--black">Jacob Thompson</a> has joined your group <a href=""
+        class="main__link main__link--blue">Chess Club</a>
+      1 day ago
+    </div>
 
-  Mark Webber reacted to your recent post My first tournament today!
-  1m ago
+    <div class="main__div">
+      <img class="main__img" src="./assets/images/avatar-rizky-hasanuddin.webp" alt="Rizky Hasanuddin Avatar">
+      <a href="#" class="main__link main__link--black">Rizky Hasanuddin</a> sent you a private message
+      5 days ago
+      </br>
+      <p class="main__div__p">
+        Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and
+        I'm already having lots of fun and improving my game.
+      </p>
+    </div>
 
-  Angela Gray followed you
-  5m ago
+    <div class="main__div">
+      <img class="main__img" src="./assets/images/avatar-kimberly-smith.webp" alt="Kimberly Smith Avatar">
+      <a href="#" class="main__link main__link--black">Kimberly Smith</a> commented on your picture
+      <img class="main__img--square" src="./assets/images/image-chess.webp" alt="Chess Image">
+      1 week ago
+    </div>
 
-  Jacob Thompson has joined your group Chess Club
-  1 day ago
+    <div class="main__div">
+      <img class="main__img" src="./assets/images/avatar-nathan-peterson.webp" alt="Nathan Peterson Avatar">
+      <a href="#" class="main__link main__link--black">Nathan Peterson</a> reacted to your recent post <a href=""
+        class="main__link main__link--blue">
+        5 end-game strategies to
+        increase your win rate
+      </a>
+      2 weeks ago
+    </div>
 
-  Rizky Hasanuddin sent you a private message
-  5 days ago
-  Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and 
-  I'm already having lots of fun and improving my game.
+    <div class="main__div">
+      <img class="main__img" src="./assets/images/avatar-anna-kim.webp" alt="Anna Kim Avatar">
+      <a href="#" class="main__link main__link--black">Anna Kim</a> left the group Chess Club
+      2 weeks ago
+    </div>
+  </main>
 
-  Kimberly Smith commented on your picture
-  1 week ago
-
-  Nathan Peterson reacted to your recent post 5 end-game strategies to increase your win rate
-  2 weeks ago
-
-  Anna Kim left the group Chess Club
-  2 weeks ago
-  
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+
 </html>
