Additional CSS and updates to HTML

--- a/index.html
+++ b/index.html
@@ -16,36 +16,43 @@
 
 <body>
   <header class="header header--flex">
-    <h1 class="header__h1">Notifications 3</h1>
-    <a href="" class="header__a">Mark all as read</a>
+    <h1 class="header__heading">Notifications <span class="header__unread">3</span> </h1>
+    <a href="" class="header__mark-read">Mark all as read</a>
   </header>
+
   <main class="main main--flex">
+
     <div class="main__div">
       <img class="main__img" src="./assets/images/avatar-mark-webber.webp" alt="Mark Webber Avatar">
-      <a href="#" class="main__link main__link--black">Mark Webber</a> reacted to your recent post <a href=""
-        class="main__link main__link--blue">My first tournament today!</a>
-      1m ago
+      <p class="main__notification">
+        <a href="#" class="main__link main__link--black">Mark Webber</a> reacted to your recent post <a href=""
+          class="main__link main__link--blue">My first tournament today!</a>
+      </p>
+      <span class="main__time"> 1m ago</span>
     </div>
 
     <div class="main__div">
       <img class="main__img" src="./assets/images/avatar-angela-gray.webp" alt="Angela Gray Avatar">
-      <a href="#" class="main__link main__link--black">Angela Gray</a> followed you
-      5m ago
+      <p class="main__notification"><a href="#" class="main__link main__link--black">Angela Gray</a> followed you</p>
+      <span class="main__time">5m ago</span>
     </div>
 
     <div class="main__div">
       <img class="main__img" src="./assets/images/avatar-jacob-thompson.webp" alt="Jacob Thompson Avatar">
-      <a href="#" class="main__link main__link--black">Jacob Thompson</a> has joined your group <a href=""
-        class="main__link main__link--blue">Chess Club</a>
-      1 day ago
+      <p class="main__notification">
+        <a href="#" class="main__link main__link--black">Jacob Thompson</a> has joined your group <a href=""
+          class="main__link main__link--blue">Chess Club</a>
+      </p>
+      <span class="main__time">1 day ago</span>
     </div>
 
     <div class="main__div">
       <img class="main__img" src="./assets/images/avatar-rizky-hasanuddin.webp" alt="Rizky Hasanuddin Avatar">
-      <a href="#" class="main__link main__link--black">Rizky Hasanuddin</a> sent you a private message
-      5 days ago
+      <p class="main__notification"><a href="#" class="main__link main__link--black">Rizky Hasanuddin</a> sent you a
+        private message</p>
+      <span class="main__time">5 days ago</span>
       </br>
-      <p class="main__div__p">
+      <p class="main__pm">
         Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and
         I'm already having lots of fun and improving my game.
       </p>
@@ -53,25 +60,29 @@
 
     <div class="main__div">
       <img class="main__img" src="./assets/images/avatar-kimberly-smith.webp" alt="Kimberly Smith Avatar">
-      <a href="#" class="main__link main__link--black">Kimberly Smith</a> commented on your picture
-      <img class="main__img--square" src="./assets/images/image-chess.webp" alt="Chess Image">
-      1 week ago
+      <p class="main__notification"><a href="#" class="main__link main__link--black">Kimberly Smith</a> commented on
+        your picture</p>
+      <img class="main__img main__img--square" src="./assets/images/image-chess.webp" alt="Chess Image">
+      <span class="main__time">1 week ago</span>
     </div>
 
     <div class="main__div">
       <img class="main__img" src="./assets/images/avatar-nathan-peterson.webp" alt="Nathan Peterson Avatar">
-      <a href="#" class="main__link main__link--black">Nathan Peterson</a> reacted to your recent post <a href=""
-        class="main__link main__link--blue">
-        5 end-game strategies to
-        increase your win rate
-      </a>
-      2 weeks ago
+      <p class="main__notification">
+        <a href="#" class="main__link main__link--black">Nathan Peterson</a> reacted to your recent post <a href=""
+          class="main__link main__link--blue">
+          5 end-game strategies to
+          increase your win rate
+        </a>
+      </p>
+      <span class="main__time">2 weeks ago</span>
     </div>
 
     <div class="main__div">
       <img class="main__img" src="./assets/images/avatar-anna-kim.webp" alt="Anna Kim Avatar">
-      <a href="#" class="main__link main__link--black">Anna Kim</a> left the group Chess Club
-      2 weeks ago
+      <p class="main__notification"><a href="#" class="main__link main__link--black">Anna Kim</a> left the group Chess
+        Club</p>
+      <span class="main__time">2 weeks ago</span>
     </div>
   </main>
 
