Worked on layout, added notification badge

--- a/index.html
+++ b/index.html
@@ -22,25 +22,27 @@
 
     <div class="main__div">
       <img class="main__img" src="./assets/images/avatar-mark-webber.webp" alt="Mark Webber Avatar">
-      <p class="main__notification">
-        <a href="#" class="main__link main__link--black">Mark Webber</a> reacted to your recent post <a href=""
-          class="main__link main__link--blue">My first tournament today!</a>
-      </p>
+      <p class="main__notification" data-unread="true">
+        <a href="#" class="main__link main__link--black">Mark Webber</a> reacted to your recent post
+        <a href="" class="main__link main__link--blue">My first tournament today!</a>
+      </p> <span class="main__unread main__unread--sr-only">Unread</span>
       <span class="main__time"> 1m ago</span>
     </div>
 
     <div class="main__div">
       <img class="main__img" src="./assets/images/avatar-angela-gray.webp" alt="Angela Gray Avatar">
-      <p class="main__notification"><a href="#" class="main__link main__link--black">Angela Gray</a> followed you</p>
+      <p class="main__notification" data-unread="true"><a href="#" class="main__link main__link--black">Angela Gray</a>
+        followed you</p>
+      <span class="main__unread main__unread--sr-only">Unread</span>
       <span class="main__time">5m ago</span>
     </div>
 
     <div class="main__div">
       <img class="main__img" src="./assets/images/avatar-jacob-thompson.webp" alt="Jacob Thompson Avatar">
-      <p class="main__notification">
+      <p class="main__notification" data-unread="true">
         <a href="#" class="main__link main__link--black">Jacob Thompson</a> has joined your group <a href=""
           class="main__link main__link--blue">Chess Club</a>
-      </p>
+      </p><span class="main__unread main__unread--sr-only">Unread</span>
       <span class="main__time">1 day ago</span>
     </div>
 
