Added JS. Worked on positing.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="./style.css">
+  <script src="./script.js" defer></script>
   <title>Frontend Mentor | Notifications page</title>
 
 
@@ -25,7 +26,7 @@
       <p class="main__notification" data-unread="true">
         <a href="#" class="main__link main__link--black">Mark Webber</a> reacted to your recent post
         <a href="" class="main__link main__link--blue">My first tournament today!</a>
-      </p> <span class="main__unread main__unread--sr-only">Unread</span>
+      </p> <span class="main__unread sr-only">Unread</span>
       <span class="main__time"> 1m ago</span>
     </div>
 
@@ -33,7 +34,7 @@
       <img class="main__img" src="./assets/images/avatar-angela-gray.webp" alt="Angela Gray Avatar">
       <p class="main__notification" data-unread="true"><a href="#" class="main__link main__link--black">Angela Gray</a>
         followed you</p>
-      <span class="main__unread main__unread--sr-only">Unread</span>
+      <span class="main__unread sr-only">Unread</span>
       <span class="main__time">5m ago</span>
     </div>
 
@@ -42,7 +43,7 @@
       <p class="main__notification" data-unread="true">
         <a href="#" class="main__link main__link--black">Jacob Thompson</a> has joined your group <a href=""
           class="main__link main__link--blue">Chess Club</a>
-      </p><span class="main__unread main__unread--sr-only">Unread</span>
+      </p><span class="main__unread sr-only">Unread</span>
       <span class="main__time">1 day ago</span>
     </div>
 
