--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
     <div class="main__div">
       <img class="main__img" src="./assets/images/avatar-mark-webber.webp" alt="Mark Webber Avatar">
-      <p class="main__notification" data-unread="true">
+      <p class="main__notification">
         <a href="#" class="main__link main__link--black">Mark Webber</a> reacted to your recent post
         <a href="" class="main__link main__link--blue">My first tournament today!</a>
-      </p> <span class="main__unread sr-only">Unread</span>
+      </p> <span class="main__unread sr-only">Unread</span> <span class="main__dot" data-unread="true"></span>
       <span class="main__time"> 1m ago</span>
     </div>
 
